--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  font-family: sans-serif;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container{
+  margin-left: 5%;
+  margin-right: 5%;
+
+}
+.form-button{
+  height: 35px;
+  border: 1px solid teal;
+  cursor: pointer;
+}
+.form-input {
+  height: 35px;
+  margin-bottom: 20px;
+  border: 1px solid teal;
+  padding-left: 10px;
+  color: teal;
+}
+
+.comom-form{
+  text-align: center;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  width: 300px;
+}
+
