--- a/src/app/components/seller-auth/seller-auth.component.html
+++ b/src/app/components/seller-auth/seller-auth.component.html
@@ -1,13 +1,28 @@
 <div class="seller-auth">
 
-  <div class="sign-up">
+  <div *ngIf="!showLogin" class="sign-up">
     <h1>Cadastrar Vendedor</h1>
       <form #sellerSignUp="ngForm" (ngSubmit)="signUp(sellerSignUp.value)" class="comom-form">
         <input class="form-input" type="text" ngModel name="name" placeholder="Digite seu nome">
         <input class="form-input" type="password"  ngModel name="password" placeholder="Digite sua senha">
         <input class="form-input" type="text"  ngModel name="email" placeholder="Digite seu Email">
         <button class="form-button">Cadastrar</button>
+        <a  class="auth-toggle-link" (click)="openLogin()">JÁ CADASTRADO ? - CLICK AQUI PARA ENTRAR</a>
+      </form>
+  </div>
+
+
+  <div *ngIf="showLogin" class="sign-up">
+    <h1>Login</h1>
+      <form #sellerlogin="ngForm" (ngSubmit)="login(sellerlogin.value)" class="comom-form">
+        <input class="form-input" type="password"  ngModel name="password" placeholder="Digite sua senha">
+        <input class="form-input" type="text"  ngModel name="email" placeholder="Digite seu Email">
+        <button class="form-button">Login</button>
+        <a class="auth-toggle-link" (click)="openSignUp()">AINDA NÃO É CADASTRADO? - CLICK AQUI PARA CADASTRAR</a>
       </form>
   </div>
 
 </div>
+
+
+
