--- a/src/app/components/seller-auth/seller-auth.component.scss
+++ b/src/app/components/seller-auth/seller-auth.component.scss
@@ -1,6 +1,21 @@
-.sign-up{
+.sign-up, .login{
   text-align: center;
   margin-bottom: 50px;
   margin-top: 80px;
   color: teal;
 }
+
+.sign-up h1, .login h1 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: teal;
+}
+
+.auth-toggle-link{
+  margin-top: 20px;
+  color: teal;
+  font-size: 14px;
+  text-align: left;
+  cursor: pointer;
+}
+
