adição do seller-add-product

--- a/src/app/components/seller-auth/seller-auth.component.html
+++ b/src/app/components/seller-auth/seller-auth.component.html
@@ -13,10 +13,11 @@
 
 
   <div *ngIf="showLogin" class="sign-up">
-    <h1>Login</h1>
+    <h1>Login de vendedores</h1>
+    <p class="error-p">{{authError}}</p>
       <form #sellerlogin="ngForm" (ngSubmit)="login(sellerlogin.value)" class="comom-form">
-        <input class="form-input" type="password"  ngModel name="password" placeholder="Digite sua senha">
         <input class="form-input" type="text"  ngModel name="email" placeholder="Digite seu Email">
+        <input class="form-input" type="password"  ngModel name="password" placeholder="Digite sua senha">
         <button class="form-button">Login</button>
         <a class="auth-toggle-link" (click)="openSignUp()">AINDA NÃO É CADASTRADO? - CLICK AQUI PARA CADASTRAR</a>
       </form>
