--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,28 @@
 <nav class="nav">
 
-  <h1>Loja Angular</h1>
+  <h1><a routerLink="/">Lojar</a></h1>
 
-    <div class="nav-search">
+    <div *ngIf="menuType==='default'" class="nav-search">
       <input type="text" placeholder="Pesquise um produto" />
       <button>Pesquisar</button>
     </div>
-    <ul>
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/seller-auth">Vendedor</a></li>
-      <li><a href="">Login</a></li>
-      <li><a href="">Carrinho(0)</a></li>
-    </ul>
+
+    <div [ngSwitch]="menuType">
+      <ul *ngSwitchCase="'default'">
+        <li><a routerLink="seller-auth">Vendedores</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Login</a></li>
+        <li><a href="">Carrinho(0)</a></li>
+      </ul>
+
+      <ul *ngSwitchCase="'seller'">
+        <li><a routerLink="seller-auth">List De Produtos</a></li>
+        <li><a routerLink="">Add Prodcutos</a></li>
+        <li><a (click)="logout()">Sair</a></li>
+        <li><a href="">{{sellerName | uppercase}}</a></li>
+      </ul>
+
+    </div>
 
 </nav>
 
